--- a/note/swift.html
+++ b/note/swift.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>Swift</h1>
-<div class="title-date">2020년 5월 21일 수정</div>
+<div class="title-date">2020년 5월 27일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -89,6 +89,7 @@
 <li><a href="#5f6348d5">종합 가이드</a></li>
 <li><a href="#ac26a2a6">Combine Framework</a></li>
 <li><a href="#7f598db0">기타</a></li>
+<li><a href="#76da383b">써드파티 모듈</a></li>
 </ul>
 </li>
 </ul>
@@ -363,6 +364,16 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 <div class="outline-text-3" id="text-7f598db0">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/85">🌏Swift와 ObjC에서 Deprecated 처리하기</a></li>
+</ul>
+</div>
+</div>
+<div id="outline-container-76da383b" class="outline-3">
+<h3 id="76da383b">써드파티 모듈</h3>
+<div class="outline-text-3" id="text-76da383b">
+<ul class="org-ul">
+<li><a target="_blank" href="https://github.com/Alamofire/Alamofire">🌏Alamofire</a>: HTTP 요청이 필요할 때 사용하는 유명한 모듈이다.</li>
+<li><a target="_blank" href="https://github.com/onevcat/Kingfisher">🌏Kingfisher</a>: 이미지 캐시</li>
+<li><a target="_blank" href="https://github.com/kishikawakatsumi/KeychainAccess">🌏KeychainAccess</a>: 이름 처럼 키체인에 뭔가를 저장하거나 불러오는 기능을 제공한다.</li>
 </ul>
 </div>
 </div>
