update with 7 changes

--- a/attach/index.html
+++ b/attach/index.html
@@ -5,14 +5,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<title>LOG의 모든 글 - Seorenn Log</title>
-<meta name="twitter:title" content="LOG의 모든 글" />
-<meta name="og:title" content="LOG의 모든 글" />
-<meta name="description" content="LOG의 모든 글" />
-<meta name="twitter:description" content="LOG의 모든 글" />
-<meta name="og:description" content="LOG의 모든 글" />
-<link rel="canonical" href="https://seorenn.github.io/log/" />
-<meta property="og:url" content="https://seorenn.github.io/log/" />
+<title>nil - Seorenn </title>
+<meta name="twitter:title" content="nil" />
+<meta name="og:title" content="nil" />
+<meta name="description" content="nil" />
+<meta name="twitter:description" content="nil" />
+<meta name="og:description" content="nil" />
+<link rel="canonical" href="https://seorenn.github.io/attach/" />
+<meta property="og:url" content="https://seorenn.github.io/attach/" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
 <meta property="og:image" content="https://seorenn.github.io/static/seorenn-symbol.png" />
@@ -55,21 +55,7 @@
 <div class="left-empty">
 </div>
 <section class="content">
-<h1><i class="material-icons md-light">portrait</i> LOG의 모든 글</h1>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/log/2020-05.html">2020년 5월의 로그</a></h2>
-<div class="article-link-date">
-2020년 5월 28일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/log/2020-04.html">2020년 4월의 로그</a></h2>
-<div class="article-link-date">
-2020년 4월 30일 수정</div>
-</div>
-</div>
+<h1>nil nil</h1>
 <div class="mid-ad-container">
 <ins class="adsbygoogle mid-ad"
      style="display:block"
