update with 4 changes

--- a/note/safari.html
+++ b/note/safari.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>사파리</h1>
-<div class="title-date">2020년 5월 27일 수정</div>
+<div class="title-date">2020년 5월 28일 수정</div>
 </header>
 <blockquote>
 <p>
@@ -66,18 +66,15 @@
 </blockquote>
 
 <p>
-사파리(Safari)는 <a href="apple.html">애플</a>에서 제작한 <a href="macos.html">macOS</a>용 웹 브라우저다.
+사파리(Safari)는 <a href="apple.html">애플</a>에서 제작한 <a href="macos.html">macOS</a> 및 <a href="ios.html">iOS</a>용 웹 브라우저다.
 원래는 윈도도 지원했으니 사실상 사용자가 거의 없어져서 어느 순간 지원이 끊어졌다고 생각된다.
-따라서 명실상부한 맥 유저를 판단하는 기준이 될 수도 있는 브라우저다.
 </p>
 
 <p>
-물론 반은 농담이다.
-왜냐하면 <a href="ios.html">iOS</a>에서 쓰이는 웹 브라우저도 이 사파리의 모바일 버전이기 때문이다.
-렌더링 엔진이나 스크립트 엔진이 거의 동일해서
-한 쪽에서 문제가 보이면 다른 쪽에서도 동일한 문제가 보일 정도로
-둘은 거의 동일하기 때문에
-사파리 유저를 판단할 때는 <a href="macos.html">macOS</a>와 <a href="ios.html">iOS</a> 사용자를 동시에 판단해야 한다.
+<a href="macos.html">macOS</a>나 <a href="ios.html">iOS</a> 양쪽 다
+사파리의 렌더링 엔진이나 스크립트 엔진이 거의 동일해서
+한 쪽에서 문제가 보이면 다른 쪽에서도 동일한 문제가 보일 정도로 비슷하다.
+따라서 사파리 유저를 판단할 때는 <a href="macos.html">macOS</a>와 <a href="ios.html">iOS</a> 사용자를 동시에 판단해야 한다.
 </p>
 
 <p>
