update with 5 changes

--- a/index.html
+++ b/index.html
@@ -138,6 +138,13 @@
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/chrome.html">크롬</a></h2>
+<div class="article-link-date">
+2020년 5월 28일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
 <div class="article-link-date">
 2020년 5월 27일 수정</div>
@@ -190,13 +197,6 @@
 <h2><a class="article-link-title" href="/note/cargo.html">Cargo</a></h2>
 <div class="article-link-date">
 2020년 5월 25일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/objective-c.html">Objective-C</a></h2>
-<div class="article-link-date">
-2020년 5월 21일 수정</div>
 </div>
 </div>
 </div>
