--- a/note/index.html
+++ b/note/index.html
@@ -64,6 +64,13 @@
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/chrome.html">크롬</a></h2>
+<div class="article-link-date">
+2020년 5월 28일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
 <div class="article-link-date">
 2020년 5월 27일 수정</div>
