--- a/note/chrome.html
+++ b/note/chrome.html
@@ -5,14 +5,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<title>사파리 - Seorenn Note</title>
-<meta name="twitter:title" content="사파리" />
-<meta name="og:title" content="사파리" />
-<meta name="description" content="사파리(Safari) 웹 브라우저" />
-<meta name="twitter:description" content="사파리(Safari) 웹 브라우저" />
-<meta name="og:description" content="사파리(Safari) 웹 브라우저" />
-<link rel="canonical" href="https://seorenn.github.io/note/safari.html" />
-<meta property="og:url" content="https://seorenn.github.io/note/safari.html" />
+<title>크롬 - Seorenn Note</title>
+<meta name="twitter:title" content="크롬" />
+<meta name="og:title" content="크롬" />
+<meta name="description" content="크롬(Chrome) 웹 브라우저" />
+<meta name="twitter:description" content="크롬(Chrome) 웹 브라우저" />
+<meta name="og:description" content="크롬(Chrome) 웹 브라우저" />
+<link rel="canonical" href="https://seorenn.github.io/note/chrome.html" />
+<meta property="og:url" content="https://seorenn.github.io/note/chrome.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
 <meta property="og:image" content="https://seorenn.github.io/static/seorenn-symbol.png" />
@@ -55,57 +55,47 @@
 </div>
 <section class="content">
 <header>
-<h1>사파리</h1>
+<h1>크롬</h1>
 <div class="title-date">2020년 5월 28일 수정</div>
 </header>
 <blockquote>
 <p>
-사파리는 야생 동물을 구경하는 관광 상품이기도 하지만,
-여기서는 웹 브라우저인 사파리를 다룬다.
+일반적으로는 금속의 한 종류인 크롬을 의미하는 영단어&#x2026;여야 하는데 이제는 상황이 역전된 단어
 </p>
 </blockquote>
 
 <p>
-사파리(Safari)는 <a href="apple.html">애플</a>에서 제작한 <a href="macos.html">macOS</a> 및 <a href="ios.html">iOS</a>용 웹 브라우저다.
-원래는 윈도도 지원했으니 사실상 사용자가 거의 없어져서 어느 순간 지원이 끊어졌다고 생각된다.
+크롬(Google Chrome)은 구글이 제작한 웹 브라우저로 크로미움이라 불리는 오픈소스 프로젝트를 기반으로 개발된다.
 </p>
 
 <p>
-<a href="macos.html">macOS</a>나 <a href="ios.html">iOS</a> 양쪽 다
-사파리의 렌더링 엔진이나 스크립트 엔진이 거의 동일해서
-한 쪽에서 문제가 보이면 다른 쪽에서도 동일한 문제가 보일 정도로 비슷하다.
-따라서 사파리 유저를 판단할 때는 <a href="macos.html">macOS</a>와 <a href="ios.html">iOS</a> 사용자를 동시에 판단해야 한다.
+과거에는 <a href="safari.html">사파리</a>와 동일하게 WebKit 렌더링 엔진을 썼지만
+이제는 Blink라 불리우는 고유 렌더링 엔진을 사용한다.
 </p>
 
 <p>
-구글의 <a href="chrome.html">크롬</a>과 비교했을 때 상대적으로 느리면서 가볍다.
-이상한 말 같지만, <a href="chrome.html">크롬</a>이 빠른 것에 비해 사파리는 스크립트 엔진이 상대적으로 느린데,
-대신 스크립트가 점유하는 CPU의 양은 적은 편이다.
-다르게 말해서 사파리의 스크립트 엔진에 멀티 프로세싱을 상당히 배려하는 편이다.
+초기에는 가볍고 빠른 브라우저를 모토로 인기를 끌기 시작했다.
+지금은 빠르긴 빠르지만 램과 CPU를 많이 차지하는 욕심쟁이가 되기도 했다.
 </p>
 
 <p>
-이는 배터리 소모량으로도 판단이 가능한데,
-결과적으로 <a href="chrome.html">크롬</a>에 비해 사파리는 메모리도 적게 먹고 CPU도 적게 차지한다.
-맥북을 배터리로 쓴다면 <a href="chrome.html">크롬</a> 보다는 사파리를 쓰는 것이 확실히 효율적이다.
-유튜브를 시청할 경우에는 특히 심한 차이가 난다.
+많은 사용자가 있기에 명실상부 OS에 무관한 표준 웹 브라우저가 되어가고 있다.
 </p>
 
 <p>
-대신 현재의 웹 사이트들은 <a href="chrome.html">크롬</a>을 기준으로 만들어진다는 큰 문제가 있어서
-가끔 사파리에서 문제가 생기는 사이트가 존재하기도 한다.
+그런데 사용자가 너무 많아져서 표준 브라우저를 넘어서
+이제는 독점 브라우저로 경계해야 아닌가 할 정도의 점유율을 가지고 있다.
+이 기세라면 과거 IE가 그랬던 것처럼 언젠가는 다양한 국가에서 독점 규제를 받을 지도 모르겠지만,
+일단 IE는 기본 설치 브라우저 였던 것에 비해 크롬은 사용자가 별도로 설치해야 해서
+바로 규제 논의에 들어갈 수준은 아닌 것으로 보인다.
 </p>
 
-<blockquote>
 <p>
-크롬의 경우 과거 IE와 비슷하게 독점 상황을 경계해야 할 정도로 사용자가 몰려있다는 현실적인 문제가 있다.
-</p>
-</blockquote>
-
-<p>
-렌더링 엔진은 WebKit이라는 오픈소스 프로젝트를 기반으로 작성되었다.
-그런데 WebKit은 <a href="apple.html">애플</a>이 지원하는 프로젝트 인데다
-이제는 <a href="apple.html">애플</a>이 주로 쓰고 있어서 사실상 <a href="apple.html">애플</a> 거라고 봐도 될 정도다.
+크롬을 소유하고 있는 구글이 독자적으로 자신들에게 유리하게 HTML5 스펙을 제정하고
+이를 크롬에 선 탑재 시키는 방법을 통해
+HTML5 표준 선정에 큰 영향을 끼쳐 공정하지 못하다는 비판도 종종 받고 있다.
+이 점으로 인해 크롬 기준으로 웹 사이트를 개발하면
+오히려 다른 브라우저에서 오동작하는 등의 문제가 있기도 하니 주의하자.
 </p>
 <div class="mid-ad-container">
 <ins class="adsbygoogle mid-ad"
@@ -122,7 +112,7 @@
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/chrome.html">크롬</a></h2>
+<h2><a class="article-link-title" href="/note/safari.html">사파리</a></h2>
 <div class="article-link-date">
 2020년 5월 28일 수정</div>
 </div>
