update with 11 changes

--- a/note/chrome.html
+++ b/note/chrome.html
@@ -84,7 +84,7 @@
 
 <p>
 그런데 사용자가 너무 많아져서 표준 브라우저를 넘어서
-이제는 독점 브라우저로 경계해야 아닌가 할 정도의 점유율을 가지고 있다.
+이제는 독점 브라우저로 경계해야 할 게 아닌가 할 정도의 점유율을 가지고 있다.
 이 기세라면 과거 IE가 그랬던 것처럼 언젠가는 다양한 국가에서 독점 규제를 받을 지도 모르겠지만,
 일단 IE는 기본 설치 브라우저 였던 것에 비해 크롬은 사용자가 별도로 설치해야 해서
 바로 규제 논의에 들어갈 수준은 아닌 것으로 보인다.
