--- a/note/magit.html
+++ b/note/magit.html
@@ -56,19 +56,20 @@
 <section class="content">
 <header>
 <h1>Magit</h1>
-<div class="title-date">2020년 4월 17일 수정</div>
+<div class="title-date">2020년 5월 28일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
 <li><a href="#61f4e102">magit-status</a></li>
-<li><a href="#64c6da24">Stage</a></li>
-<li><a href="#59d5b10c">Commit</a></li>
-<li><a href="#ce0be71e">Log</a></li>
-<li><a href="#9c6a9d9f">Push</a></li>
-<li><a href="#718f5971">Pull</a></li>
-<li><a href="#dacdb83a">Branch</a></li>
-<li><a href="#515fb8d9">Reset or Revert</a></li>
+<li><a href="#3c29465a">스테이지(Stage)</a></li>
+<li><a href="#6ec1fad1">커밋(Commit)</a></li>
+<li><a href="#bd98bce6">로그 보기(Log)</a></li>
+<li><a href="#272204d9">원격에 푸시하기(Push)</a></li>
+<li><a href="#9ff80fed">원격에서 받아오기(Pull or Fetch)</a></li>
+<li><a href="#37943d0d">브랜치(Branch)</a></li>
+<li><a href="#bf1d1572">취소 혹은 원복시키기(Reset or Revert)</a></li>
+<li><a href="#859bed23">특정 커밋 시점으로 전환하기(switch commit)</a></li>
 <li><a href="#7f598db0">기타</a></li>
 <li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
@@ -95,7 +96,7 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <h2 id="61f4e102">magit-status</h2>
 <div class="outline-text-2" id="text-61f4e102">
 <p>
-현재 상태를 표시하는 UI를 띄운다.
+현재 상태를 표시하는 UI를 띄우는 함수다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
 </p>
 
@@ -115,9 +116,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-64c6da24" class="outline-2">
-<h2 id="64c6da24">Stage</h2>
-<div class="outline-text-2" id="text-64c6da24">
+<div id="outline-container-3c29465a" class="outline-2">
+<h2 id="3c29465a">스테이지(Stage)</h2>
+<div class="outline-text-2" id="text-3c29465a">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -130,9 +131,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-59d5b10c" class="outline-2">
-<h2 id="59d5b10c">Commit</h2>
-<div class="outline-text-2" id="text-59d5b10c">
+<div id="outline-container-6ec1fad1" class="outline-2">
+<h2 id="6ec1fad1">커밋(Commit)</h2>
+<div class="outline-text-2" id="text-6ec1fad1">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -148,9 +149,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-ce0be71e" class="outline-2">
-<h2 id="ce0be71e">Log</h2>
-<div class="outline-text-2" id="text-ce0be71e">
+<div id="outline-container-bd98bce6" class="outline-2">
+<h2 id="bd98bce6">로그 보기(Log)</h2>
+<div class="outline-text-2" id="text-bd98bce6">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -160,25 +161,34 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-9c6a9d9f" class="outline-2">
-<h2 id="9c6a9d9f">Push</h2>
-<div class="outline-text-2" id="text-9c6a9d9f">
+<div id="outline-container-272204d9" class="outline-2">
+<h2 id="272204d9">원격에 푸시하기(Push)</h2>
+<div class="outline-text-2" id="text-272204d9">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-718f5971" class="outline-2">
-<h2 id="718f5971">Pull</h2>
-<div class="outline-text-2" id="text-718f5971">
+<div id="outline-container-9ff80fed" class="outline-2">
+<h2 id="9ff80fed">원격에서 받아오기(Pull or Fetch)</h2>
+<div class="outline-text-2" id="text-9ff80fed">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
+
+<p>
+만약 pull이 아닌 fetch를 원한다면 <code>f u</code> 를 눌러보자. origin에서 모든 내용이 fetch 된다.
+</p>
+
+<p>
+fetch 시 로컬과 origin 원격의 브랜치를 동기화 하고 싶다면 - 즉 원격에서 사라진 브랜치를 지우고 싶다면 -
+<code>f</code> 화면에서 <code>-d</code> 를 눌러서 prune 옵션을 활성시킨 후 <code>u</code> 를 눌러보자.
+</p>
 </div>
 </div>
-<div id="outline-container-dacdb83a" class="outline-2">
-<h2 id="dacdb83a">Branch</h2>
-<div class="outline-text-2" id="text-dacdb83a">
+<div id="outline-container-37943d0d" class="outline-2">
+<h2 id="37943d0d">브랜치(Branch)</h2>
+<div class="outline-text-2" id="text-37943d0d">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -186,11 +196,22 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-515fb8d9" class="outline-2">
-<h2 id="515fb8d9">Reset or Revert</h2>
-<div class="outline-text-2" id="text-515fb8d9">
+<div id="outline-container-bf1d1572" class="outline-2">
+<h2 id="bf1d1572">취소 혹은 원복시키기(Reset or Revert)</h2>
+<div class="outline-text-2" id="text-bf1d1572">
 <p>
-<code>x</code> :: 변경 사항을 날리고 원래대로(HEAD) 돌린다.
+<code>magit-status</code> 상에서 원하는 변경점을 선택한 후 <code>x</code> 를 누르면 해당 변경 사항을 취소하고 원래대로(HEAD) 돌린다.
+</p>
+</div>
+</div>
+<div id="outline-container-859bed23" class="outline-2">
+<h2 id="859bed23">특정 커밋 시점으로 전환하기(switch commit)</h2>
+<div class="outline-text-2" id="text-859bed23">
+<p>
+<code>magit-status</code> 에서 <code>l l</code> 을 통해 원하는 커밋을 선택한 후 <code>RET</code> 를 누른다.
+그러면 해당 커밋의 자세한 내용이 나타나는데 그 상태에서 <code>b b</code> 를 누르면
+브랜치 전환 인터페이스가 나타나면서 제일 상단에 현재의 커밋 해시가 나타난다.
+그러면 간단히 <code>RET</code> 를 누르면 원하는 시점으로 이동할 수 있다.
 </p>
 </div>
 </div>
