update with 9 changes

--- a/note/macos.html
+++ b/note/macos.html
@@ -228,9 +228,16 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/killer-application.html">킬러 애플리케이션</a></h2>
+<div class="article-link-date">
+2020년 5월 28일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/safari.html">사파리</a></h2>
 <div class="article-link-date">
-2020년 5월 27일 수정</div>
+2020년 5월 28일 수정</div>
 </div>
 </div>
 <div class="article-link">
