--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -164,6 +164,13 @@ Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/killer-application.html">킬러 애플리케이션</a></h2>
+<div class="article-link-date">
+2020년 5월 28일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/apple.html">애플</a></h2>
 <div class="article-link-date">
 2020년 5월 21일 수정</div>
