update with 11 changes

--- a/note/magit.html
+++ b/note/magit.html
@@ -83,7 +83,7 @@ It's Magit! A Git Porcelain inside Emacs
 
 <p>
 Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a> 프론트엔드/클라이언트 확장이다.
-개인적으로는 <a href="emacs.html">Emacs</a>의 킬러 소프트웨어 중 하나로 꼽는다.
+개인적으로는 <a href="emacs.html">Emacs</a>의 <a href="killer-application.html">킬러 애플리케이션</a> 중 하나로 꼽는다.
 </p>
 
 <p>
