--- a/note/killer-application.html
+++ b/note/killer-application.html
@@ -101,6 +101,23 @@ Logic Pro X나 <a href="fcpx.html">Final Cut Pro X</a>가 <a href="macos.html">m
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
+<div class="article-link-date">
+2020년 5월 28일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
+<div class="article-link-date">
+2020년 5월 28일 수정</div>
+</div>
+</div>
+</div>
 </section>
 <div class="side-ad-container">
 <ins class="adsbygoogle side-ad"
