update with 5 changes

--- a/note/killer-application.html
+++ b/note/killer-application.html
@@ -61,7 +61,7 @@
 <p>
 킬러 애플리케이션(Killer Application)이란 해당 애플리케이션이 워낙 기능이 좋아서
 이 애플리케이션이 작동하는 OS나 프레임워크, 하드웨어 등을 구매하게 만들 정도로 인기가 좋은 애플리케이션을 말한다.
-아주 좋은 혹은 인기 좋고 독창적인 애플리케이션이라는 의미로도 볼 수 있다.
+즉 인기 좋고 독창적인 애플리케이션이라는 의미로도 볼 수 있다.
 </p>
 
 <p>
