update with 5 changes

--- a/note/killer-application.html
+++ b/note/killer-application.html
@@ -65,7 +65,7 @@
 </p>
 
 <p>
-한국에서는 흔히 애플리케이션 이라는 용어는 줄여서 어플 혹은 앱 이라 불리나 특별히 다른 것은 아니다. 오해하지 말자.
+한국에서 애플리케이션 이라는 용어는 줄여서 흔히 어플 혹은 앱 이라 불리나 특별히 다른 것은 아니다. 오해하지 말자.
 </p>
 
 <p>
