update with 1 changes

--- a/note/css.html
+++ b/note/css.html
@@ -128,6 +128,7 @@ CSS는 Cascade Style Sheet의 약자로
 <style>
 .example-block {
   border: 1px dashed gray;
+  padding: 8px;
 }
 </style>
 
@@ -208,7 +209,9 @@ CSS에서 어떤 태그나 클래스 등에 스타일을 입힐 건지 결정하
 ::placeholder   <span style="color: #5B6268;">/* </span><span style="color: #5B6268;">&#54268; &#54596;&#46300; &#54540;&#47112;&#51060;&#49828;&#54848;&#45908; </span><span style="color: #5B6268;">*/</span>
 </pre>
 </div>
-
+<p>
+<code>::before</code> 를 써서 예를 만들어보자.
+</p>
 <div class="org-src-container">
 <pre class="src src-html">&lt;<span style="color: #c678dd;">style</span>&gt;
 .goodhead {
@@ -216,26 +219,31 @@ CSS에서 어떤 태그나 클래스 등에 스타일을 입힐 건지 결정하
 }
 .goodhead::before {
   color: white;
-  content: "!";
+  content: "[GOOD] ";
 }
 &lt;/<span style="color: #c678dd;">style</span>&gt;
 
 &lt;<span style="color: #c678dd;">div</span> <span style="color: #dcaeea;">class</span>=<span style="color: #98be65;">"goodhead"</span>&gt;Sample&lt;/<span style="color: #c678dd;">div</span>&gt;
 </pre>
 </div>
-
+<p>
+이렇게 하면 아래 처럼 표시된다.
+</p>
 <style>
 .goodhead {
   color: gray;
 }
 .goodhead::before {
   color: white;
-  content: "!";
+  content: "[GOOD] ";
 }
 </style>
 <div class="example-block">
 <div class="goodhead">Sample</div>
 </div>
+<p>
+여러모로 활용 방법이 많을 것 같다.
+</p>
 </div>
 </div>
 </div>
