--- a/note/org-mode.html
+++ b/note/org-mode.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>Org Mode</h1>
-<div class="title-date">2020년 5월 28일 수정</div>
+<div class="title-date">2020년 5월 29일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -77,6 +77,7 @@
 <li><a href="#7f598db0">기타</a></li>
 </ul>
 </li>
+<li><a href="#5c56f540">Doom Emacs Snippets</a></li>
 <li><a href="#9ba880c5">팁</a>
 <ul>
 <li><a href="#5a8ffd55">매크로(Macro)</a></li>
@@ -247,6 +248,20 @@ verbatim과 code가 동일해 보이는데 사실 동일하다. 문법을 무시
 <dt><code>-----</code></dt><dd>줄 긋기(hr 태그로 익스포트)</dd>
 </dl>
 </div>
+</div>
+</div>
+<div id="outline-container-5c56f540" class="outline-2">
+<h2 id="5c56f540">Doom Emacs Snippets</h2>
+<div class="outline-text-2" id="text-5c56f540">
+<p>
+아래는 <a href="doom-emacs.html">Doom Emacs</a>에서 제공되는 기본적인 스니펫이다.
+아래 키워드를 입력하고 <code>TAB</code> 을 누르면 자동으로 블록 템플릿이 완성된다.
+</p>
+<dl class="org-dl">
+<dt><code>&lt;s</code></dt><dd>소스 블록(<code>BEGIN_SRC</code> ~ <code>END_SRC</code>)</dd>
+<dt><code>&lt;q</code></dt><dd>인용 블록(<code>BEGIN_QUOTE</code> ~ <code>END_QUOTE</code>)</dd>
+<dt><code>&lt;h</code></dt><dd>HTML 출력 블록(<code>BEGIN_EXPORT html</code> ~ <code>END_EXPORT</code>)</dd>
+</dl>
 </div>
 </div>
 <div id="outline-container-9ba880c5" class="outline-2">
