update with 1 changes

--- a/note/org-mode.html
+++ b/note/org-mode.html
@@ -254,7 +254,7 @@ verbatim과 code가 동일해 보이는데 사실 동일하다. 문법을 무시
 <h2 id="5c56f540">Doom Emacs Snippets</h2>
 <div class="outline-text-2" id="text-5c56f540">
 <p>
-아래는 <a href="doom-emacs.html">Doom Emacs</a>에서 제공되는 기본적인 스니펫이다.
+아래는 <a href="doom-emacs.html">Doom Emacs</a>에서 Org Mode 용으로 제공되는 스니펫 중 일부다.
 아래 키워드를 입력하고 <code>TAB</code> 을 누르면 자동으로 블록 템플릿이 완성된다.
 </p>
 <dl class="org-dl">
