update with 8 changes

--- a/note/org-mode.html
+++ b/note/org-mode.html
@@ -236,7 +236,7 @@ verbatim과 code가 동일해 보이는데 사실 동일하다. 문법을 무시
 </p>
 
 <p>
-잘 활용하면 스프레드쉬트를 흉내낼 수도 있습니다.
+잘 활용하면 스프레드쉬트를 흉내낼 수도 있다.
 <a href="org-spreadsheet.html">Org 스프레드쉬트</a> 글을 참고해 보자.
 </p>
 </div>
@@ -355,16 +355,16 @@ verbatim과 code가 동일해 보이는데 사실 동일하다. 문법을 무시
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/killer-application.html">킬러 애플리케이션</a></h2>
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
-2020년 5월 28일 수정</div>
+2020년 5월 29일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
+<h2><a class="article-link-title" href="/note/killer-application.html">킬러 애플리케이션</a></h2>
 <div class="article-link-date">
-2020년 5월 25일 수정</div>
+2020년 5월 28일 수정</div>
 </div>
 </div>
 <div class="article-link">
