--- a/note/index.html
+++ b/note/index.html
@@ -57,7 +57,35 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/definition.html">정의</a></h2>
+<div class="article-link-date">
+2020년 5월 30일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
+<div class="article-link-date">
+2020년 5월 30일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/objective-c.html">Objective-C</a></h2>
+<div class="article-link-date">
+2020년 5월 30일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/implementation.html">구현</a></h2>
+<div class="article-link-date">
+2020년 5월 30일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/c-language.html">C 언어</a></h2>
 <div class="article-link-date">
 2020년 5월 30일 수정</div>
 </div>
@@ -158,13 +186,6 @@
 <h2><a class="article-link-title" href="/note/cargo.html">Cargo</a></h2>
 <div class="article-link-date">
 2020년 5월 25일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/objective-c.html">Objective-C</a></h2>
-<div class="article-link-date">
-2020년 5월 21일 수정</div>
 </div>
 </div>
 <div class="article-link">
@@ -375,20 +396,6 @@
 <h2><a class="article-link-title" href="/note/gitignore.html">gitignore</a></h2>
 <div class="article-link-date">
 2020년 4월 28일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/implementation.html">구현</a></h2>
-<div class="article-link-date">
-2020년 4월 26일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/definition.html">정의</a></h2>
-<div class="article-link-date">
-2020년 4월 26일 수정</div>
 </div>
 </div>
 <div class="article-link">
