--- a/note/objective-c.html
+++ b/note/objective-c.html
@@ -56,10 +56,10 @@
 <section class="content">
 <header>
 <h1>Objective-C</h1>
-<div class="title-date">2020년 5월 21일 수정</div>
+<div class="title-date">2020년 5월 30일 수정</div>
 </header>
 <p>
-Objective-C는 프로그래밍 언어의 한 종류로 C/C++ 언어의 슈퍼셋(superset)이다.
+Objective-C는 프로그래밍 언어의 한 종류로 <a href="c-language.html">C 언어</a> 혹은 C++ 언어의 슈퍼셋(superset)이다.
 쉽게 말해서 C나 C++과 호환되면서도 특유의 다른 문법 또한 추가로 지원한다는 말이다.
 </p>
 
