--- a/note/definition.html
+++ b/note/definition.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>정의</h1>
-<div class="title-date">2020년 4월 26일 수정</div>
+<div class="title-date">2020년 5월 30일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -95,7 +95,7 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 <h2 id="26b276e5">구세대 언어의 예</h2>
 <div class="outline-text-2" id="text-26b276e5">
 <p>
-예를 들어 C 언어의 경우 정의는 아래와 같은 식이다.
+예를 들어 <a href="c-language.html">C 언어</a>의 경우 정의는 아래와 같은 식이다.
 </p>
 <div class="org-src-container">
 <pre class="src src-c++"><span style="color: #ECBE7B;">int</span> <span style="color: #c678dd;">do_what</span>(<span style="color: #ECBE7B;">int</span> <span style="color: #dcaeea;">param_a</span>, <span style="color: #ECBE7B;">char</span> *<span style="color: #dcaeea;">param_b</span>);
@@ -193,7 +193,7 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/implementation.html">구현</a></h2>
 <div class="article-link-date">
-2020년 4월 26일 수정</div>
+2020년 5월 30일 수정</div>
 </div>
 </div>
 <div class="article-link">
