update with 1 changes

--- a/note/c-language.html
+++ b/note/c-language.html
@@ -67,7 +67,7 @@
 </div>
 </div>
 <p>
-켄 톰슨과 데니스 리치에 의해 개발된 Unix를 위한 프로그래밍 언어다.
+C 언어는 켄 톰슨과 데니스 리치에 의해 개발된 유닉스(Unix)를 위한 프로그래밍 언어다.
 현재 주류로 사용되는 언어 중 실직적으로 가장 저수준(Low-Level)의 시스템 프로그래밍을 위한 언어로 볼 수 있다.
 </p>
 
