update with 2 changes

--- a/note/docker.html
+++ b/note/docker.html
@@ -102,7 +102,7 @@
 <li><a href="#8f72b672">적당히 시작하기 좋은 이미지들</a></li>
 </ul>
 </li>
-<li><a href="#bf2994a4">트러블슈팅</a>
+<li><a href="#89e15078">문제 해결</a>
 <ul>
 <li><a href="#39bf7966">The command returned a non-zero code: 137</a></li>
 </ul>
@@ -431,9 +431,9 @@ apt도 없다.
 </div>
 </div>
 </div>
-<div id="outline-container-bf2994a4" class="outline-2">
-<h2 id="bf2994a4">트러블슈팅</h2>
-<div class="outline-text-2" id="text-bf2994a4">
+<div id="outline-container-89e15078" class="outline-2">
+<h2 id="89e15078">문제 해결</h2>
+<div class="outline-text-2" id="text-89e15078">
 </div>
 <div id="outline-container-39bf7966" class="outline-3">
 <h3 id="39bf7966">The command returned a non-zero code: 137</h3>
