update with 4 changes

--- a/note/doom-emacs.html
+++ b/note/doom-emacs.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>Doom Emacs</h1>
-<div class="title-date">2020년 5월 29일 수정</div>
+<div class="title-date">2020년 6월 2일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -559,6 +559,7 @@ Package error: (error Could not find package hover in recipe repositories: (org-
 <h2 id="0bbb90e1">외부 링크</h2>
 <div class="outline-text-2" id="text-0bbb90e1">
 <ul class="org-ul">
+<li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5FT65hMZL6SkFmbyqFaLe3b">🌏Doom Emacs (Youtube Playlist)</a></li>
 <li><a target="_blank" href="https://github.com/hlissner/doom-emacs">🌏Doom Emacs 공식 저장소</a></li>
 <li><a target="_blank" href="https://seorenn.tistory.com/47">🌏Doom Emacs 라는 것을 설치해봤다</a></li>
 </ul>
