--- a/note/carthage.html
+++ b/note/carthage.html
@@ -216,6 +216,16 @@ github "user/projectname" == 1.0
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swift-package-manager.html">Swift Package Manager</a></h2>
+<div class="article-link-date">
+2020년 6월 3일 수정</div>
+</div>
+</div>
+</div>
 </section>
 <div class="side-ad-container">
 <ins class="adsbygoogle side-ad"
