--- a/note/index.html
+++ b/note/index.html
@@ -57,6 +57,13 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swift-package-manager.html">Swift Package Manager</a></h2>
+<div class="article-link-date">
+2020년 6월 3일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
 2020년 6월 2일 수정</div>
