--- a/note/twitter.html
+++ b/note/twitter.html
@@ -5,12 +5,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<title>Twitter - Seorenn Note</title>
-<meta name="twitter:title" content="Twitter" />
-<meta name="og:title" content="Twitter" />
-<meta name="description" content="Twitter(트위터)의 소개와 검색 관련 팁 모음" />
-<meta name="twitter:description" content="Twitter(트위터)의 소개와 검색 관련 팁 모음" />
-<meta name="og:description" content="Twitter(트위터)의 소개와 검색 관련 팁 모음" />
+<title>트위터 - Seorenn Note</title>
+<meta name="twitter:title" content="트위터" />
+<meta name="og:title" content="트위터" />
+<meta name="description" content="트위터(Twitter)의 소개와 검색 관련 팁 모음" />
+<meta name="twitter:description" content="트위터(Twitter)의 소개와 검색 관련 팁 모음" />
+<meta name="og:description" content="트위터(Twitter)의 소개와 검색 관련 팁 모음" />
 <link rel="canonical" href="https://seorenn.github.io/note/twitter.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/twitter.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -55,8 +55,8 @@
 </div>
 <section class="content">
 <header>
-<h1>Twitter</h1>
-<div class="title-date">2020년 5월 15일 수정</div>
+<h1>트위터</h1>
+<div class="title-date">2020년 6월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
