update with 13 changes

--- a/note/vim.html
+++ b/note/vim.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>Vim</h1>
-<div class="title-date">2020년 5월 25일 수정</div>
+<div class="title-date">2020년 6월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -112,7 +112,7 @@ h   l
 <p>
 한번 익숙해지면 헤어나오기 힘든 악명 높은(?) 키다.
 심지어 여기저기에서 차용하고 있는 커서 대안 이동키 이기도 합니다.
-특히 <code>j</code> 키와 <code>k</code> 키는 페이스북이나 트위터 등
+특히 <code>j</code> 키와 <code>k</code> 키는 <a href="facebook.html">페이스북</a>이나 <a href="twitter.html">트위터</a> 등
 다양한 서비스에서 비슷한 용도로 사용할 수 있기도 하다.
 </p>
 </div>
@@ -290,7 +290,7 @@ neovim 등에서는 안 되는 경우도 있으니 주의하자.
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
-2020년 5월 25일 수정</div>
+2020년 6월 2일 수정</div>
 </div>
 </div>
 <div class="article-link">
