--- a/note/facebook.html
+++ b/note/facebook.html
@@ -136,6 +136,16 @@ PHP와 아주 깊은 관계가 있다.
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/vim.html">Vim</a></h2>
+<div class="article-link-date">
+2020년 6월 3일 수정</div>
+</div>
+</div>
+</div>
 </section>
 <div class="side-ad-container">
 <ins class="adsbygoogle side-ad"
