--- a/note/twitter.html
+++ b/note/twitter.html
@@ -179,6 +179,13 @@ A와 B가 함께 들어있는 트윗만 검색하려면 아래처럼 할 수 있
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/vim.html">Vim</a></h2>
+<div class="article-link-date">
+2020년 6월 3일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/facebook.html">페이스북</a></h2>
 <div class="article-link-date">
 2020년 6월 3일 수정</div>
