update with 5 changes

--- a/note/dockerfile.html
+++ b/note/dockerfile.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>Dockerfile</h1>
-<div class="title-date">2020년 4월 21일 수정</div>
+<div class="title-date">2020년 6월 4일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -65,6 +65,7 @@
 <li><a href="#28af54f1">사용자 지정</a></li>
 <li><a href="#5d5e8bc1">Health Checking</a></li>
 <li><a href="#67358999">Multi Stage Building</a></li>
+<li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -164,6 +165,15 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 ...
 </pre>
 </div>
+</div>
+</div>
+<div id="outline-container-0bbb90e1" class="outline-2">
+<h2 id="0bbb90e1">외부 링크</h2>
+<div class="outline-text-2" id="text-0bbb90e1">
+<ul class="org-ul">
+<li><a target="_blank" href="https://github.com/gauthamp10/dockerfile-boilerplates">🌏dockerfile-boilerplates</a>:
+다양한 언어 별 Dockerfile 템플릿 보일러플레이트 코드가 올라와있는 저장소</li>
+</ul>
 </div>
 </div>
 <div class="mid-ad-container">
