--- a/note/javascript.html
+++ b/note/javascript.html
@@ -370,7 +370,7 @@ console.log(map.size);
 <h3 id="1aa5fa4a">배열에 특정 원소가 포함되어 있는지 판단하기</h3>
 <div class="outline-text-3" id="text-1aa5fa4a">
 <p>
-<code>Array.prototype.includes</code> 를 사용하는 게 가장 간단하다.
+<code>Array.prototype.includes()</code> 를 사용하는 게 가장 간단하다.
 </p>
 <div class="org-src-container">
 <pre class="src src-javascript">[<span style="color: #98be65;">"0"</span>, <span style="color: #98be65;">"1"</span>, <span style="color: #98be65;">"2"</span>, <span style="color: #98be65;">"3"</span>].includes(<span style="color: #98be65;">"0"</span>)  <span style="color: #5B6268;">// </span><span style="color: #5B6268;">-&gt; true</span>
